--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -38,6 +38,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+          args: -- --test-threads=1
 
   lints:
     name: Lints
