--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ filedescriptor = "0.7.3"
 clap = "3.0.0-beta.2"
 strum = { version = "0.21", features = ["derive"] }
 shlex = "1.0.0"
+log = "0.4.14"
+simplelog = "^0.10.0"
