--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 on:
   push:
     tags:
-    - 'v[0-9]+.[0-9]+.[0-9]+'
+    - 'v[0-9]+.[0-9]+.[0-9]+*'
 
 name: Cargo release
 
@@ -10,6 +10,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
+      - run: sudo apt-get update && sudo apt-get install libudev-dev libinput-dev
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
