--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lillinput"
-version = "0.1.0"
+version = "0.1.1-alpha"
 authors = ["Diego M. Rodríguez <diego@moreda.io>"]
 edition = "2018"
 description = "Connect libinput gestures to i3 and others"
@@ -19,3 +19,4 @@ strum = { version = "0.21", features = ["derive"] }
 shlex = "1.0.0"
 log = "0.4.14"
 simplelog = "^0.10.0"
+itertools = "0.10.1"
