--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ categories = ["command-line-utilities", "gui"]
 
 [dependencies]
 clap = "3.0.0-beta.4"
+# If using rustc < 1.54.0, clap 3.0.0-beta.2 is needed.
+# clap = "=3.0.0-beta.2"
+# clap_derive = "=3.0.0-beta.2"
 filedescriptor = "0.7.3"
 i3ipc = "0.10.1"
 input = "0.5.0"
