--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["command-line-utilities", "gui"]
 # updates to `default_value_if` arguments.
 clap = "=3.0.0-beta.2"
 clap_derive = "=3.0.0-beta.2"
+# Stick to filedescriptor 0.7.3, as 0.8.0+ require feature resolve.
 filedescriptor = "0.7.3"
 i3ipc = "0.10.1"
 input = "0.7.0"
