--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,14 @@ categories = ["command-line-utilities", "gui"]
 # updates to `default_value_if` arguments.
 clap = "=3.0.0-beta.2"
 clap_derive = "=3.0.0-beta.2"
+# Stick to filedescriptor 0.7.3, as 0.8.0+ require feature resolve.
 filedescriptor = "0.7.3"
 i3ipc = "0.10.1"
-input = "0.6.0"
+input = "0.7.0"
 itertools = "0.10.1"
-libc = "0.2.101"
+libc = "0.2.103"
 log = "0.4.14"
 shlex = "1.1.0"
-simplelog = "^0.10.0"
-strum = { version = "0.21", features = ["derive"] }
-strum_macros = "0.21"
+simplelog = "0.10.2"
+strum = { version = "0.21.0", features = ["derive"] }
+strum_macros = "0.21.0"
