--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,8 @@ keywords = ["i3", "touchpad", "x11", "libinput", "gestures"]
 categories = ["command-line-utilities", "gui"]
 
 [dependencies]
-# Stick to clap 3.0.0-beta.2, as it requires rustc >= 1.54.0 and additional
-# updates to `default_value_if` arguments.
-clap = "=3.0.0-beta.2"
-clap_derive = "=3.0.0-beta.2"
+clap = "3.0.0-beta.4"
+clap_derive = "3.0.0-beta.4"
 # Stick to filedescriptor 0.7.3, as 0.8.0+ require feature resolve.
 filedescriptor = "0.7.3"
 i3ipc = "0.10.1"
