--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,17 @@ keywords = ["i3", "touchpad", "x11", "libinput", "gestures"]
 categories = ["command-line-utilities", "gui"]
 
 [dependencies]
-clap = { version = "=3.0.0-rc.7", features = ["derive"] }
-config = "0.11.0"
-filedescriptor = "0.8.1"
-i3ipc = "0.10.1"
-input = "0.7.1"
-itertools = "0.10.1"
-libc = "0.2.112"
-log = "0.4.14"
-serde = { version= "1.0.131", features = ["derive"] }
-shlex = "1.1.0"
-simplelog = "0.11.1"
-strum = { version = "0.23.0", features = ["derive"] }
-strum_macros = "0.23.0"
-xdg = "2.4.0"
+clap = { version = "~3.0", features = ["derive"] }
+config = "~0.11"
+filedescriptor = "~0.8"
+i3ipc = "~0.10"
+input = "~0.7"
+itertools = "~0.10"
+libc = "~0.2"
+log = "~0.4"
+serde = { version= "~1.0", features = ["derive"] }
+shlex = "~1.1"
+simplelog = "~0.11"
+strum = { version = "~0.23", features = ["derive"] }
+strum_macros = "~0.23"
+xdg = "~2.4"
