--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ keywords = ["i3", "touchpad", "x11", "libinput", "gestures"]
 categories = ["command-line-utilities", "gui"]
 
 [dependencies]
-clap = { version = "~3.1", features = ["derive"] }
+clap = { version = "~3.0.0", features = ["derive"] }
+clap_derive = { version = "~3.0.0" }
 config = "~0.11"
 filedescriptor = "~0.8"
 i3ipc = "~0.10"
