--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -67,4 +67,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --all --tests -- -D warnings
+          args: --all --tests -- -D warnings -W clippy::pedantic
