--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ shlex = "~1.1"
 simplelog = "~0.12.0"
 strum = { version = "~0.24", features = ["derive"] }
 strum_macros = "~0.24"
+thiserror = "~1.0"
 xdg = "~2.4"
 
 [dev-dependencies]
