--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -67,4 +67,10 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --all --tests -- -D warnings -W clippy::pedantic
+          args: -- -D warnings -W clippy::pedantic
+
+      - name: Run cargo clippy (tests)
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: --tests -- -D warnings -W clippy::pedantic
