--- a/crates/lillinput-cli/Cargo.toml
+++ b/crates/lillinput-cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lillinput"
+name = "lillinput-cli"
 version = "0.2.1"
 authors = ["Diego M. Rodríguez <diego@moreda.io>"]
 edition = "2021"
@@ -10,16 +10,17 @@ keywords = ["i3", "touchpad", "x11", "libinput", "gestures"]
 categories = ["command-line-utilities", "gui"]
 
 [dependencies]
-filedescriptor = "~0.8"
+clap = { version = "~3.2.17", features = ["derive"] }
+clap-verbosity-flag = "~1.0.1"
+config = "~0.13.2"
 i3ipc = "~0.10"
-input = "~0.7"
-itertools = "~0.10"
-libc = "~0.2"
-log = { version = "~0.4.17" }
-shlex = "~1.1"
+lillinput = { path = "../lillinput" }
+log = { version = "~0.4.17", features = ["serde"] }
+serde = { version = "~1.0", features = ["derive"] }
+simplelog = "~0.12.0"
 strum = { version = "~0.24", features = ["derive"] }
 strum_macros = "~0.24"
-thiserror = "~1.0"
+xdg = "~2.4"
 
 [dev-dependencies]
 tempfile = "~3.3"
