Update crates descriptions

--- a/crates/lillinput-cli/Cargo.toml
+++ b/crates/lillinput-cli/Cargo.toml
@@ -3,7 +3,7 @@ name = "lillinput-cli"
 version = "0.2.1"
 authors = ["Diego M. Rodríguez <diego@moreda.io>"]
 edition = "2021"
-description = "Connect libinput gestures to i3 and others"
+description = "Application for connecting libinput gestures to i3 and others"
 repository = "https://github.com/diego-plan9/lillinput/"
 license = "BSD-3-Clause"
 keywords = ["i3", "touchpad", "x11", "libinput", "gestures"]
