--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -19,8 +19,10 @@ jobs:
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install libudev-dev libinput-dev
 
-      - name: cargo check
+      - name: Install stable toolchain
         uses: dtoolnay/rust-toolchain@stable
+
+      - name: cargo check
         run: cargo check
 
   test:
@@ -34,8 +36,10 @@ jobs:
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install libudev-dev libinput-dev
 
-      - name: cargo test
+      - name: Install stable toolchain
         uses: dtoolnay/rust-toolchain@stable
+
+      - name: cargo test
         run: cargo test
 
   fmt:
