--- a/crates/lillinput-cli/Cargo.toml
+++ b/crates/lillinput-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lillinput-cli"
-version = "0.2.1"
+version = "0.3.0-rc0"
 authors = ["Diego M. Rodríguez <diego@moreda.io>"]
 edition = "2021"
 description = "Application for connecting libinput gestures to i3 and others"
@@ -14,7 +14,7 @@ clap = { version = "~3.2.17", features = ["derive"] }
 clap-verbosity-flag = "~1.0.1"
 config = "~0.13.2"
 i3ipc = "~0.10"
-lillinput = { path = "../lillinput", version = "0.2.1" }
+lillinput = { path = "../lillinput", version = "0.3.0-rc0" }
 log = { version = "~0.4.17", features = ["serde"] }
 serde = { version = "~1.0", features = ["derive"] }
 simplelog = "~0.12.0"
