--- a/.github/workflows/release_lib.yml
+++ b/.github/workflows/release_lib.yml
@@ -1,7 +1,7 @@
 on:
   push:
     tags:
-    - 'v[0-9]+.[0-9]+.[0-9]+*'
+    - 'lillinput/v[0-9]+.[0-9]+.[0-9]+*'
 
 name: Cargo release
 
@@ -20,6 +20,6 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
 
       - name: Publish crate
-        run: cargo publish --token ${CRATES_TOKEN}
+        run: cargo publish --package lillinput --token ${CRATES_TOKEN}
         env:
           CRATES_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
