--- a/crates/lillinput/Cargo.toml
+++ b/crates/lillinput/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lillinput"
-version = "0.3.0-rc0"
+version = "0.3.0"
 authors = ["Diego M. Rodríguez <diego@moreda.io>"]
 edition = "2021"
 description = "Library for connecting libinput gestures to i3 and others"
