--- a/crates/lillinput-cli/Cargo.toml
+++ b/crates/lillinput-cli/Cargo.toml
@@ -23,5 +23,5 @@ strum_macros = "~0.24"
 xdg = "~2.4"
 
 [dev-dependencies]
-tempfile = "~3.3"
-serial_test = "~0.9.0"
+tempfile = "3.8"
+serial_test = "2.0"
