--- a/crates/lillinput/Cargo.toml
+++ b/crates/lillinput/Cargo.toml
@@ -22,5 +22,5 @@ strum_macros = "~0.24"
 thiserror = "~1.0"
 
 [dev-dependencies]
-tempfile = "~3.3"
-serial_test = "~0.9.0"
+tempfile = "3.8"
+serial_test = "2.0"
