--- a/crates/lillinput/Cargo.toml
+++ b/crates/lillinput/Cargo.toml
@@ -10,16 +10,16 @@ keywords = ["i3", "touchpad", "x11", "libinput", "gestures"]
 categories = ["command-line-utilities", "gui"]
 
 [dependencies]
-filedescriptor = "~0.8"
-i3ipc = "~0.10"
+filedescriptor = "0.8"
+i3ipc = "0.10"
 input = "~0.7"
 itertools = "~0.10"
 libc = "~0.2"
-log = { version = "~0.4.17" }
+log = { version = "0.4.20" }
 shlex = "~1.1"
 strum = { version = "~0.24", features = ["derive"] }
 strum_macros = "~0.24"
-thiserror = "~1.0"
+thiserror = "1.0"
 
 [dev-dependencies]
 tempfile = "3.8"
