--- a/crates/lillinput/Cargo.toml
+++ b/crates/lillinput/Cargo.toml
@@ -13,12 +13,11 @@ categories = ["command-line-utilities", "gui"]
 filedescriptor = "0.8"
 i3ipc = "0.10"
 input = "~0.7"
-itertools = "~0.10"
-libc = "~0.2"
+itertools = "0.11"
+libc = "0.2"
 log = { version = "0.4.20" }
-shlex = "~1.1"
-strum = { version = "~0.24", features = ["derive"] }
-strum_macros = "~0.24"
+shlex = "1.1"
+strum = { version = "0.25", features = ["derive"] }
 thiserror = "1.0"
 
 [dev-dependencies]
