--- a/crates/lillinput-cli/Cargo.toml
+++ b/crates/lillinput-cli/Cargo.toml
@@ -12,16 +12,15 @@ categories = ["command-line-utilities", "gui"]
 [dependencies]
 clap = { version = "~3.2.17", features = ["derive"] }
 clap-verbosity-flag = "~1.0.1"
-config = "~0.13.2"
-i3ipc = "~0.10"
+config = "0.13"
+i3ipc = "0.10"
 lillinput = { path = "../lillinput", version = "0.3.0" }
-log = { version = "~0.4.17", features = ["serde"] }
-serde = { version = "~1.0", features = ["derive"] }
-simplelog = "~0.12.0"
-strum = { version = "~0.24", features = ["derive"] }
-strum_macros = "~0.24"
-xdg = "~2.4"
+log = { version = "0.4.20", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+simplelog = "0.12"
+strum = { version = "0.25", features = ["derive"] }
+xdg = "2.5"
 
 [dev-dependencies]
-tempfile = "~3.3"
-serial_test = "~0.9.0"
+tempfile = "3.8"
+serial_test = "2.0"
