--- a/crates/lillinput-cli/Cargo.toml
+++ b/crates/lillinput-cli/Cargo.toml
@@ -10,8 +10,8 @@ keywords = ["i3", "touchpad", "x11", "libinput", "gestures"]
 categories = ["command-line-utilities", "gui"]
 
 [dependencies]
-clap = { version = "~3.2.17", features = ["derive"] }
-clap-verbosity-flag = "~1.0.1"
+clap = { version = "4.4", features = ["derive"] }
+clap-verbosity-flag = "2.0"
 config = "0.13"
 i3ipc = "0.10"
 lillinput = { path = "../lillinput", version = "0.3.0" }
