--- a/crates/lillinput/Cargo.toml
+++ b/crates/lillinput/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["command-line-utilities", "gui"]
 [dependencies]
 filedescriptor = "0.8"
 i3ipc = "0.10"
-input = "~0.7"
+input = "0.8"
 itertools = "0.11"
 libc = "0.2"
 log = { version = "0.4.20" }
